# VitaCordOldRespository

./: .gitignore  2psp2core-1496492036-0x00024436f1-eboot.bin.psp2dmp  3psp2core-1496492786-0x000432237f-eboot.bin.psp2dmp  4psp2core-1496493878-0x0004613b4b-eboot.bin.psp2dmp  5psp2core-1496494593-0x00042f21cd-eboot.bin.psp2dmp  CMakeCache.txt  CMakeLists.txt  README.MD  RinnegatamantesCopyFilesIntoVPKScript-andlongfilename.txt  autobuild.sh  cmake_install.cmake  psp2core-1496322771-0x0000b32ddb-eboot.bin.psp2dmp  psp2core-1496327655-0x00003c32b7-eboot.bin.psp2dmp  psp2core-1496490745-0x000403269f-eboot.bin.psp2dmp  psp2core-1496497848-0x0004a334bf-eboot.bin.psp2dmp  psp2core-1496689862-0x0001492587-eboot.bin.psp2dmp  psp2core-1496731663-0x0003ee3fbb-eboot.bin.psp2dmp  psp2core-1496750379-0x00004c21df-eboot.bin.psp2dmp  psp2core-1496756008-0x0001572ba3-eboot.bin.psp2dmp  sonicbuild.sh  vita_cord.elf.REMOVED.git-id  vita_cord.elf.velf.REMOVED.git-id  vita_cord.self  vita_cord.vpk  vita_cord.vpk_param.sfo
assets/font/: lastresort.ttf.REMOVED.git-id  seguiemj.pgf
sce_sys/livearea/contents/: template.xml
src/: Discord.cpp  Discord.hpp  DiscordApp.cpp  DiscordApp.hpp  GUIElements.hpp  VitaGUI.cpp  VitaGUI.hpp  VitaIME.cpp  VitaIME.hpp  VitaNet.cpp  VitaNet.hpp  VitaPad.cpp  VitaPad.hpp  VitaTouch.cpp  VitaTouch.hpp  discord_helper.hpp  easyencryptor.cpp  easyencryptor.hpp  json.hpp  log.cpp  log.hpp  main-old.cpp  main.cpp  mathtools.hpp  net_functions.cpp  net_functions.hpp
src/bkp/: Discord.hpp  DiscordApp.cpp  DiscordApp.hpp  VitaGUI.cpp  VitaIME.cpp  VitaPad.cpp  VitaTouch.cpp  easyencryptor.cpp  log.cpp  main.cpp
